--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "@vercel/speed-insights": "^1.0.10",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "clx": "^1.0.0",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
@@ -29,5 +34,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
