--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "clsx": "^2.1.1",
     "clx": "^1.0.0",
     "framer-motion": "^11.2.6",
+    "i18next": "^23.12.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.3",
     "react-router-dom": "^6.24.1",
     "resend": "^3.4.0",
     "tailwind-merge": "^2.3.0",
