--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "tailwindcss-animated": "^1.1.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.16.1",
+    "@types/react": "18.3.4",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.12.10",
@@ -39,7 +39,7 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5"
+    "typescript": "5.5.4"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "index.js",
